Handle returns and add meetings for each user in the seeder